update old deps

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Portfolio KoriagmiK",
+  "name": "old_korigamik",
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
@@ -8,7 +8,7 @@
   },
   "devDependencies": {
     "typescript": "^5.1.6",
-    "vite": "^4.4.6"
+    "vite": "^6.2.0"
   },
   "dependencies": {}
 }
